<resources>
    <string name="app_name">Tevoi</string>
    <string name="title_activity_media_player">MediaPlayerActivity</string>
    <string name="title_activity_media_player_browser">MediaPlayerBrowserActivity</string>
    <string name="hasLocation_En">This Track has a nearby location</string>
    <string name="defaultMapApp_En">open your default map App. are you sure you want to navigate away from Tevoi App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string-array name="rivers">
        <item>List Tracks</item>
        <item >Interface Language</item>
        <item>Test Pagination</item>
       
        <item >Partners</item>
        
        <item >Notifications</item>
        <item >Download limits</item>
        <item >About Us</item>
        <item >Feedback and Contact</item>
        <item >Follow Us</item>
        
        <item >History</item>
        <item >Play Next</item>
        <item >Favourite </item>
        <item> My Lists </item>
        <item>Filters</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_header_fragement">This Track has a nearby location</string>
    <string name="location_body_fragement">Open your default maps App, are you sure you want to navigate away from Tevoi App</string>
    <string name="add_To_list"> Add this track to list</string>
    <string name="quick_tour">Quick tour</string>
    <string name="under_construction">This page is under construction</string>
    <string name="play_now_list_isempty">Play Next List Is Empty</string>
    <string name="there_is_only_one_track_in_the_list">There is only one track in these list</string>
    <string name="track_in_media_player_now">Track already in media player now</string>
    <string name="no_track_to_play">No track to play</string>
    <string name="track_has_no_text">Track has no text</string>
    <string name="track_has_no_location">Track has no location</string>
    <string name="add_new_list">Add New List</string>
    <string name="track_added_to_list_successfully">Track added to list successfully</string>
    <string name="general_error">Something went wrong, please try again later</string>
    <string name="app_version_number">1.0</string>
    <string name="menu_settings">Settings</string>
    <string name="cd_repeat">Repeat one or all</string>
    <string name="success_update_profile">Your Profile Updated Successfully</string>
    <string name="success_reset_password">Your Password Updated Successfully</string>
    <string name="cd_previous">Skip backwards</string>
    <string name="cd_play">Play and pause</string>
    <string name="cd_next">Skip forwards</string>
    <string name="interface_language">interface language</string>
    <string name="about_us">About us</string>
    <string name="logout">Logout</string>
    <string name="demo_user_need_to_register">Sorry, You need to register.</string>
    <string name="track_language">Default Track Language</string>
    <string name="show_default_audio_language">Show audio tracks in selected language only.</string>
    <string name="listen_our_story">Listen to our story</string>
    <string name="empty_list">Empty List</string>
    <string name="mandatory_fileds">Mandatory fileds*</string>
    <string name="user_Name">User Name*</string>
    <string name="email">Email*</string>
    <string name="password">Password*</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="we_need_info">We need the following information to better guess your preferences</string>
    <string name="age">Age*</string>
    <string name="save_changes">Save Changes</string>
    <string name="gender">Gender*</string>
    <string name="occupation">Occupation*</string>
    <string name="country">Country*</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="visit_website">Please visite our website for more info about our services.</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="your_message">Your Message</string>
    <string name="send">Send</string>
    <string name="categories">Categories</string>
    <string name="subscriped_partners">Subscriped Partners</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="follow_us">Follow us on social media</string>
    <string name="new_track">New</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="user_name">User Name</string>
    <string name="log_in">Log in</string>
    <string name="keep_melogged">Keep me logged in</string>
    <string name="forgot">Forgot Password?</string>
    <string name="enter_email">Please enter your email</string>
    <string name="request_password">Request new Password</string>
    <string name="add_newlist">Add New List</string>
    <string name="all_notification">All notification</string>
    <string name="error_msg">Sorry! Couldn\'t load page.</string>
    <string name="btn_retry">Retry</string>
    <string name="error_msg_no_internet">You\'re Not connected to internet. Please check your connection and try again</string>
    <string name="error_msg_timeout">The server took too long to respond</string>
    <string name="error_msg_unknown">An unexpected error occurred</string>
    <string name="tap_to_reload">Tap to reload</string>
    <string name="continue_as_guest">Continue as a guest</string>
    <string name="continue_as_guest_text">If you continue as a guest some features will not be availlable</string>
    <string name="title_upgrade_to_premium">Upgrade to premium</string>
    <string name="title_list_tracks">Stream</string>
    <string name="title_interface_language">Interface Language</string>
    <string name="title_partners">Partners</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_donwload_limits">Donwload Limits</string>
    <string name="title_about_us">About Us</string>
    <string name="title_my_profile">My Profile</string>
    <string name="title_my_account">My Account</string>
    <string name="title_general">General</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="title_follow_us">Follow Us</string>
    <string name="title_history">History</string>
    <string name="title_filter">Filter</string>
    <string name="title_play_next">Play Next</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_my_list">My Lists</string>
    <string name="title_no_internet_connection">No Internet Connection</string>
    <string name="title_lists">Lists</string>
    <string name="title_setting">Setting</string>
    <string name="no_quota_for_offline">You don\'nt have enough quota for getting this track offline.</string>
    <string name="no_quota_for_today">Sorry ,,, Your quota is finished for today.</string>
    <string name="dont_show_heard_tracks">Don\'t Show heard tracks</string>
    <string name="msg_play_now_deleted_successfully">Play now deleted successfully</string>
    <string name="control_the_time_tracks">Control the time tracks are kept available offline in the play next list</string>
    <string name="Note_The_more_you_keep_tracks">"Note: The more you keep tracks the more cache the app will use on your mobile"</string>
    <string name="list_name_required">Name can\'t be empty</string>
    <string name="dialog_message">Delete List</string>
    <string name="dialog_title_remove_from_list">Are you sure you want to delete list?</string>
    <string name="Yes">Yes</string>
    <string name="No" translatable="false">No</string>
    <string name="clear_selection">Clear Selections</string>
    <string name="clear_all_tracks">Clear All Tracks</string>
    <string name="clear_all_lists">Clear All Lists</string>
    <string name="loader_msg">Loading ...</string>
    <string name="clear_all_history">Clear All History</string>
    <string name="add_track_to_list">Add Track</string>
    <string name="offer_coupon">offer coupon</string>
    <string name="choose_subscription_period">choose subscription period</string>
    <string name="payment_method">Payment Method</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="month_1">1 Month</string>
    <string name="month_3">3 Months</string>
    <string name="month_6">6 Months</string>
    <string name="month_12">12 Months</string>
    <string name="apple_store_google_play">Apple Store/google Play</string>
    <string name="phone_bill">Phone Bill</string>
    <string name="credit_debit_card">Credit/Debit Card</string>
    <string name="paypal">Paypal</string>
    <string name="price">Price</string>
    <string name="premium_subscription_for_12_months">Premium Subscription for 12 Months</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="dollar_120">$120</string>
    <string name="dollar_12">$1.2</string>
    <string name="dollar_121">$121.2</string>
    <string name="pay_now">Pay Now</string>
    <string name="track_will_download">Track will be downloaded ... </string>
    <string name="no_lists_to_delete">No Lists to delete.</string>
    <string name="no_lists_for_user">You don\'t have lists yet.</string>
    <string name="add_to_play_next">Add to play next</string>
    <string name="add_to_list_txt">Add to list</string>
    <string name="read_track_text">Read Text</string>
    <string name="like_track">Like</string>
    <string name="remove_track">Remove</string>
    <string name="sign_in">Sign in</string>
    <string name="like">Like</string>
    <string name="dilike">Dislike</string>
    <string name="reset_password">Reset Password</string>
    <string name="type_your_list_name">Type Your List Name: </string>
    <string name="dialog_title_clear_user_list">Are you sure you want to delete all lists? This will delete the tracks related to them also.</string>
    <string name="dialog_title_clear_favourite_list">Are you sure you want to clear your favourite list?</string>
    <string name="create_list"> Create List</string>
    <string name="restart_app_for_apply_language">You need to reopen the app to change the language</string>
    <string name="download_limit_update_sucessfully">Download Limit Updated Sucessfully</string>
    <string name="select_list">Select a List :</string>
    <string name="partner_add_to_filter">Partner Added To Filter Successfully</string>
    <string name="partner_already_exist_in_filter">Partner Already Exist In Filter</string>
    <string name="user_name_cant_be_empty">User Name Can\'t Be Empty!</string>
    <string name="message_name_cant_be_empty">Message Name Can\'t Be Empty!</string>
    <string name="message_send_successfully">Message send Successfully</string>
    <string name="enable_location_for_nearby_tracks">Enable Location for Nearby Tracks</string>
    <string name="search">Search</string>
    <string name="submit">Submit</string>
    <string name="please_check_internet">Please check your internet connection, and try again.</string>
    <string name="the_server_took_too_long">The server took too long to respond.</string>
    <string name="login">Login</string>
    <string name="a_z">A-Z</string>
    <string name="share_track_on_social_media">Share track on social media</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="add_to_filter">Add To filter</string>
    <string name="number_of_tracks">Number of tracks</string>
</resources>