<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tevoiBrownDark"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_subscription_period"
        android:textColor="@color/fontColor"
        android:textSize="20dp"
        android:layout_marginTop="27dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="27dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:buttonTint="@color/fontColor"
            android:layout_gravity="center_vertical"
            android:id="@+id/chk_12_month_subscraption"

            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_12"
            android:textColor="@color/fontColor"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:buttonTint="@color/fontColor"
            android:layout_gravity="center_vertical"
            android:id="@+id/chk_3_month_subscraption"

            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_3"
            android:textColor="@color/fontColor"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:buttonTint="@color/fontColor"
            android:layout_gravity="center_vertical"
            android:id="@+id/chk_1_month_subscraption"

            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_1"
            android:textColor="@color/fontColor"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_method"
        android:textColor="@color/fontColor"
        android:textSize="20dp"
        android:layout_marginTop="27dp"
        android:layout_marginStart="27dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:buttonTint="@color/fontColor"
            android:layout_gravity="center_vertical"
            android:id="@+id/chk_apple_store_google_play"

            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apple_store_google_play"
            android:textColor="@color/fontColor"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/fontColor"
            android:layout_gravity="center_vertical"
            android:id="@+id/chk_phone_bill"

            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_bill"
            android:textColor="@color/fontColor"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/fontColor"
            android:layout_gravity="center_vertical"
            android:id="@+id/chk_credit_debit_card"

            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit_debit_card"
            android:textColor="@color/fontColor"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:buttonTint="@color/fontColor"
            android:layout_gravity="center_vertical"
            android:id="@+id/chk_paypal"

            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paypal"
            android:textColor="@color/fontColor"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="27dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/fontColor"
            android:layout_gravity="center_vertical"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
        <TextView

            android:layout_marginStart="27dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/premium_subscription_for_12_months"
            android:textColor="@color/fontColor"
            android:layout_gravity="center_vertical"
            />
            <TextView
                android:layout_marginStart="300dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dollar_120"
                android:textColor="@color/fontColor"
                android:layout_gravity="center_vertical"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView

                android:layout_marginStart="27dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tax"
                android:textColor="@color/fontColor"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_marginStart="300dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dollar_12"
                android:textColor="@color/fontColor"
                android:layout_gravity="center_vertical"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView

                android:layout_marginStart="27dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@color/fontColor"
                android:layout_gravity="center_vertical"
                android:textSize="17dp"
                />
            <TextView
                android:layout_marginStart="300dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dollar_121"
                android:textColor="@color/fontColor"
                android:layout_gravity="center_vertical"
                android:textSize="17dp"
                />
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginStart="25dp"
        >

        <ImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@mipmap/accept_button_normal"
            android:layout_gravity="center_vertical"
            android:id="@+id/btn_play_now_payment"
            />

        <TextView
            android:id="@+id/txt_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_now"
            android:textColor="@color/fontColor"
            android:layout_marginStart="7dp"
            android:layout_gravity="center_vertical"
            />

        <ImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@mipmap/close_button_normal"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="62dp"
            android:id="@+id/btn_cancel_payment"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_gravity="center_vertical"
            android:textColor="@color/fontColor"
            android:layout_marginStart="7dp"/>
    </LinearLayout>
</LinearLayout>